# DomanNeurocomputationalModel

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: .gitkeep
docs/: fase01-relatorio.md  fase02-relatorio-v0.md  fase02-relatorio-v1.md  fase02-relatorio-v2.md  fase02-relatorio-v3.md  fase02-relatorio-v4.md  fase02-relatorio.md  neural_architecture.md
examples/: four_neuron_minimal.py
experiments/: test_learning.py
notebooks/: exploratory_analysis.ipynb  four_neuron_network_validation.ipynb
src/: __init__.py
src/control/: __init__.py  learning_controller.py  manual_controller.py  robot_adapter.py
src/experiments/: __init__.py  experiment_logger.py  experiment_report.py  experiment_runner.py
src/interfaces/: __init__.py  base_interface.py  webots_interface.py
src/neural/: README.md  __init__.py  four_neuron_network.py  network.py  neuron.py  plasticity.py
tests/: test_experiment_runner.py  test_four_neuron_network.py  test_learning_runtime.py  test_robot_adapter.py
webots/protos/: Ball.proto  CompactInclinedPlane.proto  CompactInclinedPlaneExperiment.proto  Cube.proto  DifferentialDriveRobot.proto  FourNeuronRobot.proto  FourWheelRobot.proto  GoalArea.proto  InclinedFourWheelRobot.proto  Robot.proto  SimpleRobot.proto  StableDifferentialRobot.proto  StableRobot.proto  VeriSimpleRobot.proto
webots/tutorials/: .4_wheels_robot.wbproj  4_wheels_robot.wbt  appearance.wbt  collision_avoidance.wbt  compound_solid.wbt  custom_robot_window.wbt  hexapod.wbt  my_first_simulation.wbt  obstacles.wbt
webots/worlds/: .moon.wbproj  (+33 more)
(+26 files in other folders)
