[project]
name = "dorman"
version = "0.1.0"
description = "Doman project"
requires-python = "==3.13.*"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
